--- a/layouts/index.html
+++ b/layouts/index.html
@@ -13,7 +13,7 @@
   {{ template "_internal/opengraph.html" . }}
   {{ template "_internal/twitter_cards.html" . }}
   
-  <title>{{ .Title }}</title>
+  <title>{{ .Site.Title }}</title>
   <link rel="preload" href="https://unpkg.com/@primer/css@^16.0.0/dist/primer.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript>
     <link rel="stylesheet" href="https://unpkg.com/@primer/css@^16.0.0/dist/primer.css">
